// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Responsible Component should render name with multiple parts with two initials 1`] = `
<div
  className="MuiBox-root MuiBox-root-4"
>
  <div
    className="MuiAvatar-root MuiAvatar-circle makeStyles-avatarResponsible-1 MuiAvatar-colorDefault"
  >
    JD
  </div>
   
  John Doe Old Boy
</div>
`;

exports[`Responsible Component should render name with one part with one initial 1`] = `
<div
  className="MuiBox-root MuiBox-root-2"
>
  <div
    className="MuiAvatar-root MuiAvatar-circle makeStyles-avatarResponsible-1 MuiAvatar-colorDefault"
  >
    J
  </div>
   
  Johnny
</div>
`;

exports[`Responsible Component should render name with two parts with two initial 1`] = `
<div
  className="MuiBox-root MuiBox-root-3"
>
  <div
    className="MuiAvatar-root MuiAvatar-circle makeStyles-avatarResponsible-1 MuiAvatar-colorDefault"
  >
    JD
  </div>
   
  John Doe
</div>
`;
